refactor: upgrade to 1.21.4 API (1.21.11 - 26.2), migrate to PacketEvents, add standalone HologramManager